opam-version: "1.2"
maintainer: "Hannes Mehnert"
authors: [
  "Hannes Mehnert <hannes@mehnert.org>"
  "Jacques-Henri Jourdan <jacques-henri.jourdan@normalesup.org>"
  "Frédéric Bour <frederic.bour@lakaban.net>"
]
homepage: "https://github.com/hannesm/statmemprof-mirage"
doc: "https://hannesm.github.io/statmemprof-mirage/doc"
license: "MIT"
dev-repo: "https://github.com/hannesm/statmemprof-mirage.git"
bug-reports: "https://github.com/hannesm/statmemprof-mirage/issues"
tags: []
available: [ compiler = "4.03.0+statistical-memprof"
           | compiler = "4.04.2+statistical-memprof"
           | compiler = "4.05.0+statistical-memprof"
           | compiler = "4.06.0+statistical-memprof"
           | compiler = "4.06.1+statistical-memprof"
           | compiler = "4.07.1+statistical-memprof" ]
depends:
[
  "dune" {build & >= "1.0"}
  "sturgeon" { >= "0.3" }
  "inuit" { >= "0.3" }
]
depopts: []
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
